feat: configurable chat, GUI, scheduled tips and DiscordSRV for 1.1.0